--- a/app/src/main/res/layout/activity_set_time.xml
+++ b/app/src/main/res/layout/activity_set_time.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.zqf.theaim.SetTimeActivity">
+    tools:context="com.example.zqf.theaim.SetTimeActivity"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <com.example.zqf.theaim.Fragment.WeekdayView
+        android:layout_width="match_parent"
+        android:layout_height="30dp" />
+    <com.example.zqf.theaim.Fragment.MonthDateView
+        android:layout_width="fill_parent"
+        android:layout_height="350dp" />
+    <TextView
+        android:id="@+id/set_time56"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:hint="设置时间"/>
+
+</LinearLayout>
