--- a/app/src/main/res/layout/activity_set_time.xml
+++ b/app/src/main/res/layout/activity_set_time.xml
@@ -14,7 +14,7 @@
         android:layout_width="fill_parent"
         android:layout_height="350dp" />
     <TextView
-        android:id="@+id/set_time56"
+        android:id="@+id/set_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="25sp"
