--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -10,9 +10,9 @@
         android:id="@+id/tick_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_margin="10dp"
         android:textAppearance="?attr/textAppearanceListItem"
-        app:srcCompat="@android:drawable/checkbox_off_background" />
+        app:srcCompat="@drawable/square" />
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
