--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,11 +4,11 @@
     <item
         android:id="@+id/action_add_aim"
         android:orderInCategory="100"
-        android:title="@string/action_add_aim"
+        android:title="添加奖励/目标"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/action_add_reward"
-        android:orderInCategory="100"
-        android:title="@string/action_add_reward"
-        app:showAsAction="never" />
+    <!--<item-->
+        <!--android:id="@+id/action_add_reward"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:title="@string/action_add_reward"-->
+        <!--app:showAsAction="never" />-->
 </menu>
