--- a/app/src/main/res/layout/activity_add_aim.xml
+++ b/app/src/main/res/layout/activity_add_aim.xml
@@ -22,7 +22,7 @@
 
         <TextView
             android:id="@+id/aim_time"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="10"
             android:hint="@string/aim_time"
