--- a/app/src/main/res/layout/activity_set_time.xml
+++ b/app/src/main/res/layout/activity_set_time.xml
@@ -10,6 +10,12 @@
     <com.example.zqf.theaim.Fragment.WeekdayView
         android:layout_width="match_parent"
         android:layout_height="30dp" />
+    <TextView
+        android:id="@+id/month"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"/>
     <com.example.zqf.theaim.Fragment.MonthDateView
         android:id="@+id/monthDateView"
         android:layout_width="fill_parent"
