--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,5 +18,13 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="Theme.PopupMenu"
+
+        parent="ThemeOverlay.AppCompat.Light">
+
+        <!--<item name="android:popupBackground">@color/popupwindow_background</item>-->
+
+    </style>
+
 
 </resources>
