--- a/app/src/main/res/layout/activity_personal_center.xml
+++ b/app/src/main/res/layout/activity_personal_center.xml
@@ -14,23 +14,20 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
-
     <ImageView
         android:id="@+id/touxiang"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_gravity="center"
-        android:background="@drawable/aim_point"
         android:layout_marginTop="20dp"/>
 
-    <TextView
-        android:id="@+id/id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="ID"
-        android:paddingTop="10dp"/>
+     <TextView
+         android:id="@+id/id"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="center_horizontal"
+         android:text="ID"
+         android:paddingTop="10dp"/>
 
     <TextView
         android:id="@+id/mail"
@@ -64,16 +61,9 @@
             android:id="@+id/schedule_amount_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10"
+
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"/>
-
-        <ImageView
-            android:id="@+id/schedule_amount_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp" />
-
     </LinearLayout>
 
     <ImageView
@@ -102,13 +92,6 @@
             android:text="10"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"/>
-
-        <ImageView
-            android:id="@+id/done_schedule_amount_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp" />
-
     </LinearLayout>
 
         <com.github.mikephil.charting.charts.PieChart
@@ -142,13 +125,6 @@
             android:text="10"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"/>
-
-        <ImageView
-            android:id="@+id/reword_point_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp" />
-
     </LinearLayout>
 
     <ImageView
