--- a/app/src/main/res/layout/fragment_aim.xml
+++ b/app/src/main/res/layout/fragment_aim.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:orientation="vertical">
 
     <ExpandableListView
         android:id="@+id/expandablelistview"
@@ -12,11 +12,4 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:groupIndicator="@null"></ExpandableListView>
-    <ImageView
-        android:id="@+id/image_add"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:src="@drawable/plus"/>
-</RelativeLayout>
+</LinearLayout>
