--- a/app/src/main/res/layout/list_item_child.xml
+++ b/app/src/main/res/layout/list_item_child.xml
@@ -10,19 +10,32 @@
         android:id="@+id/text_child"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:textSize="20sp"
+        android:textSize="17sp"
+        android:textColor="#4876ff"
         android:text="child"
         android:layout_centerHorizontal="true"
         android:gravity="center" />
 
     <ImageView
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/child_aim" />
+
+    <ImageView
         android:id="@+id/delete_child"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/delete" />
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/more" />
 
 
 </RelativeLayout>
