--- a/app/src/main/res/layout/list_item_parent.xml
+++ b/app/src/main/res/layout/list_item_parent.xml
@@ -8,29 +8,34 @@
         android:id="@+id/text_parent"
         android:layout_width="wrap_content"
         android:clickable="true"
-        android:layout_height="50dp"
-        android:textSize="20sp"
+        android:layout_height="35dp"
+        android:textSize="25sp"
+        android:textColor="#3a5fcd"
+        android:textStyle="bold"
         android:text="parent"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
         android:gravity="center"/>
 
     <ImageView
-        android:id="@+id/image_add"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@drawable/plus2" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/parent_aim" />
 
     <ImageView
         android:id="@+id/delete_parent"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/delete" />
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/more" />
 
 
 </RelativeLayout>
