--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.zqf.theaim.ForgetPasswordActivity">
+    tools:context="com.example.zqf.theaim.ForgetPasswordActivity"
+    android:background="@drawable/background">
     <EditText
         android:id="@+id/editText_forget_number"
         android:layout_width="match_parent"
