--- a/app/src/main/res/layout/activity_phone_register.xml
+++ b/app/src/main/res/layout/activity_phone_register.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.zqf.theaim.PhoneRegisterActivity">
+    tools:context="com.example.zqf.theaim.PhoneRegisterActivity"
+    android:background="@drawable/background">
     <EditText
         android:id="@+id/editText_phonereg_number"
         android:layout_width="match_parent"
