--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.zqf.theaim.RegisterActivity">
+    tools:context="com.example.zqf.theaim.RegisterActivity"
+    android:background="@drawable/background">
     <EditText
         android:id="@+id/editText_register_name"
         android:layout_width="match_parent"
