--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -25,7 +25,10 @@ tools:context="com.example.zqf.theaim.Fragment.CalendarFragment">
         android:id="@+id/monthDateView"
         android:layout_width="fill_parent"
         android:layout_height="200dp" />
-
+    <ImageView
+        android:id="@+id/calendar_background"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <ListView
         android:id="@+id/calendar_listview"
         android:layout_width="match_parent"
