--- a/app/src/main/res/layout/fragment_re_item.xml
+++ b/app/src/main/res/layout/fragment_re_item.xml
@@ -15,16 +15,19 @@
 
     <TextView
         android:id="@+id/re_content"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_weight="5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textSize="25sp"
+        android:layout_weight="5"
+        android:layout_margin="13dp"
         android:maxLines="2"/>
     <TextView
         android:id="@+id/re_costpoint"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|right"
         android:layout_weight="1"
-        android:textSize="25sp" />
+        android:layout_margin="13dp"
+        android:textColor="#FF3300"/>
 
 </LinearLayout>
