--- a/app/src/main/res/layout/activity_set_time.xml
+++ b/app/src/main/res/layout/activity_set_time.xml
@@ -46,9 +46,9 @@
         android:layout_height="45dp"
         android:orientation="horizontal">
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/clock"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:background="@drawable/today"
             android:layout_marginLeft="10dp"/>
         <TextView
             android:id="@+id/set_time"
