--- a/app/src/main/res/layout/fragment_reward.xml
+++ b/app/src/main/res/layout/fragment_reward.xml
@@ -29,6 +29,11 @@
             android:textColor="#FF3333"/>
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/reward_background"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <!-- TODO: Update blank fragment layout -->
     <ListView
         android:id="@+id/re_list"
